clean up and refactoring
Change-Id: I73a16bb6240e9fa12eec581b97e241f5e852c3a8